@@ -1,6 +1,6 @@
 /*
- * Copyright (C) 2020 Linux Studio Plugins Project <https://lsp-plug.in/>
- *           (C) 2020 Vladimir Sadovnikov <sadko4u@gmail.com>
+ * Copyright (C) 2023 Linux Studio Plugins Project <https://lsp-plug.in/>
+ *           (C) 2023 Vladimir Sadovnikov <sadko4u@gmail.com>
  *
  * This file is part of lsp-tk-lib
  * Created on: 20 июн. 2020 г.
@@ -98,7 +98,7 @@ MTEST_BEGIN("tk.widgets.compound", menu)
         if (h->menu->visibility()->get())
             h->menu->hide();
         else
-            h->menu->show();
+            h->menu->showmp(sender);
 
         return STATUS_OK;
     }
